--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 		<link rel="stylesheet" type="text/css" href="interface.css" />
 	</head>
 	<body>
-		<button onclick="cookieClick(1)">Click Me!</button>
+		<h1>Idle Cats</h1>
+        <br />
+        <button onclick="cookieClick(1)">Click Me!</button>
 		<br />
 		Cookies: <span id="cookies">0</span>
 		<br />
